--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -38,6 +38,7 @@ code {
 
 .page-title {
   font-size: 3.5rem;
+  text-align: center;
 }
 
 .page-logo {
